<resources>
    <string name="Friday">Friday</string>
    <string name="Monday">Monday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Thursday">Thursday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="a_res_0x7f100008">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="b_res_0x7f10000f">Alt+</string>
    <string name="c_res_0x7f100010">Ctrl+</string>
    <string name="d_res_0x7f100011">delete</string>
    <string name="e_res_0x7f100012">enter</string>
    <string name="f_res_0x7f100013">Function+</string>
    <string name="g_res_0x7f100014">Meta+</string>
    <string name="h_res_0x7f100015">Shift+</string>
    <string name="i_res_0x7f100016">space</string>
    <string name="j_res_0x7f100017">Sym+</string>
    <string name="k_res_0x7f100018">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="l_res_0x7f10001c">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">openWorkout</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="a_res_0x7f100026">Characters entered %1$d of %2$d</string>
    <string name="b_res_0x7f100027">Character limit exceeded %1$d of %2$d</string>
    <string name="c_res_0x7f100028">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="d_res_0x7f10002a">Clear text</string>
    <string name="a_res_0x7f10002b">Copy</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="a_res_0x7f10002e">Error information</string>
    <string name="b_res_0x7f10002f">Close</string>
    <string name="c_res_0x7f100030">Copied to clipboard</string>
    <string name="d_res_0x7f100031">Copy to clipboard</string>
    <string name="e_res_0x7f100032">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="f_res_0x7f100034">Restart app</string>
    <string name="day_unit">%d. day</string>
    <string name="error_empty_text">field can\'t be empty</string>
    <string name="e_res_0x7f100037">Error</string>
    <string name="error_no_access_to_file">Can\'t access file</string>
    <string name="error_no_github_connection">Can\'t connect to GitHub API, make sure you are online</string>
    <string name="error_no_github_download">Can\'t download file via GitHub API</string>
    <string name="error_no_sessions">No workout session in %s found. Please create a workout session.</string>
    <string name="error_no_trainings">No workout trainings found. Please create a workout training.</string>
    <string name="error_no_valid_training_package">%s is not a valid training package</string>
    <string name="error_no_workout_items">No workout item in %s found. Please create a workout item.</string>
    <string name="b_res_0x7f10003f">Advanced</string>
    <string name="f_res_0x7f100040">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label_about">About</string>
    <string name="label_about_info">Copyright (C) 2020 olie.xdev@googlemail.com\n\nThis program is free software: you can redistribute it and/or modify\nit under the terms of the GNU General Public License as published by\nthe Free Software Foundation, either version 3 of the License, or\n(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,\nbut WITHOUT ANY WARRANTY; without even the implied warranty of\nMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the\nGNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License\nalong with this program. If not, see http://www.gnu.org/licenses/</string>
    <string name="label_add">Add</string>
    <string name="label_add_from_database">Add from database</string>
    <string name="label_add_session">Add new session</string>
    <string name="label_add_toast">%s added</string>
    <string name="label_add_training">Add new training</string>
    <string name="label_add_workout">Add new workout</string>
    <string name="label_already_purchased">You already purchased it</string>
    <string name="label_break">Take a break</string>
    <string name="label_break_duration_item_info">%d s break</string>
    <string name="label_break_time">Break time</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_cloud_import">Cloud import</string>
    <string name="label_congratulation">Congratulation</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_toast">%s deleted</string>
    <string name="label_description">Description</string>
    <string name="label_duplicate">Duplicate</string>
    <string name="label_edit">Edit</string>
    <string name="label_export_local">Export</string>
    <string name="label_female">Female</string>
    <string name="label_help">Help</string>
    <string name="label_image">Image</string>
    <string name="label_info_exported">Training plan %s exported to %s</string>
    <string name="label_info_finished_session">You finished your session in</string>
    <string name="label_info_imported">Training plan %s imported from %s</string>
    <string name="label_info_purchase_for">Purchase now for %s</string>
    <string name="label_info_remove_permanently">Pay once and remove permanently any advertising from openWorkout</string>
    <string name="label_input_create_days">How many sessions do you want to insert?</string>
    <string name="label_local_import">Local import</string>
    <string name="label_male">Male</string>
    <string name="label_name">Name</string>
    <string name="label_new_training_plan">New training plan</string>
    <string name="label_new_workout_item">New workout item</string>
    <string name="label_ok">OK</string>
    <string name="label_package_size_kbytes">%s kBytes package size</string>
    <string name="label_package_size_mbytes">%s MBytes package size</string>
    <string name="label_pending_purchase">You have a pending purchase, please complete the purchase order %s</string>
    <string name="label_prep_duration_item_info">%d s preparation</string>
    <string name="label_preparation_time">Preparation time</string>
    <string name="label_prepare">Prepare your workout</string>
    <string name="label_publish">Publish</string>
    <string name="label_publish_message">For publishing your training plan, please save and upload the exported training file via a pull request on the &lt;a href=https://github.com/oliexdev/openWorkout&gt;openWorkout GitHub&lt;/a&gt; project page. &lt;br&gt;&lt;br&gt; For more information visit the &lt;a href=https://github.com/oliexdev/openWorkout/wiki&gt;openWorkout wikipage&lt;/a&gt;.</string>
    <string name="label_purchase_canceled">Purchase canceled</string>
    <string name="label_purchase_unexpected_error">Unexpected error abort purchasing</string>
    <string name="label_really_reset_dialog">Do you really want to reset the status of all items?</string>
    <string name="label_repetition_count">Repetition count</string>
    <string name="label_repetition_info">%d x %s repetition</string>
    <string name="label_repetition_item_info">%dx repetition</string>
    <string name="label_reset">Reset</string>
    <string name="label_reset_toast">%s reset</string>
    <string name="label_save">Save</string>
    <string name="label_save_toast">%s saved</string>
    <string name="label_select_debug_file">Save debug file</string>
    <string name="label_select_export_file">Export openWorkout training package</string>
    <string name="label_select_image_file">Select an image file</string>
    <string name="label_select_import_file">Import openWorkout training package</string>
    <string name="label_select_video_file">Select a video file</string>
    <string name="label_session_size_completed">%d of %d sessions completed</string>
    <string name="label_start">Start</string>
    <string name="label_successful_purchased">Successful purchased</string>
    <string name="label_time_mode">Time mode</string>
    <string name="label_training_plans">training plans</string>
    <string name="label_video">Video</string>
    <string name="label_video_mode">Video mode</string>
    <string name="label_work_duration_item_info">%d s work duration</string>
    <string name="label_workout">Do your workout</string>
    <string name="label_workout_time">Workout time</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_home">Home</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trainings">Trainings</string>
    <string name="menu_trainingsdatabase">Training item database</string>
    <string name="menu_trophy">Trophy</string>
    <string name="menu_workout">Workout</string>
    <string name="menu_workoutdatabase">Workout item database</string>
    <string name="menu_workoutsettings">Workout settings</string>
    <string name="menu_workoutslide">Workout slide</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="g_res_0x7f100099">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="preference_enable_dark_theme">Dark theme mode</string>
    <string name="preference_enable_debug_logging">Enable debug logging</string>
    <string name="preference_reminder">Reminder</string>
    <string name="preference_remove_advertisements">Remove advertisements</string>
    <string name="preference_sound">Sound</string>
</resources>