<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:layout_gravity="center" android:id="@+id/roundCardView" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:elevation="0dp" app:cardCornerRadius="30dp">
                <ImageView android:id="@+id/imgView" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?attr/selectableItemBackground" android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            <TableLayout android:id="@+id/tableLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:stretchColumns="*" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_name"/>
                    <EditText android:id="@+id/nameView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="textPersonName"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_description"/>
                    <EditText android:gravity="start|top" android:id="@+id/descriptionView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="textMultiLine"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_preparation_time"/>
                    <EditText android:id="@+id/prepTimeView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="numberSigned"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_break_time"/>
                    <EditText android:id="@+id/breakTimeView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="numberSigned"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_time_mode"/>
                    <Switch android:layout_gravity="start" android:id="@+id/timeModeView" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow android:id="@+id/workoutTimeRow" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_workout_time"/>
                    <EditText android:id="@+id/workoutTimeView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="numberSigned"/>
                </TableRow>
                <TableRow android:id="@+id/repetitionCountRow" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_repetition_count"/>
                    <EditText android:id="@+id/repetitionCountView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:inputType="numberSigned"/>
                </TableRow>
                <TableRow android:id="@+id/isVideoModeRow" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_video_mode"/>
                    <Switch android:layout_gravity="start" android:id="@+id/videoModeView" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                </TableRow>
                <TableRow android:id="@+id/videoCardRow" android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_video"/>
                    <androidx.cardview.widget.CardView android:id="@+id/videoCardView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" app:cardCornerRadius="10dp">
                        <VideoView android:id="@+id/videoView" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="150dp"/>
                    </androidx.cardview.widget.CardView>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
