<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation" app:startDestination="@+id/nav_home">
    <fragment android:label="@string/menu_home" android:name="com.health.openworkout.gui.home.HomeFragment" android:id="@+id/nav_home">
        <action android:id="@+id/action_HomeFragment_to_TrainingFragment" app:destination="@+id/nav_trainings"/>
        <action android:id="@+id/action_HomeFragment_to_WorkoutFragmentSlide" app:destination="@+id/nav_workoutslide"/>
    </fragment>
    <fragment android:label="@string/menu_settings" android:name="com.health.openworkout.gui.preference.MainPreferences" android:id="@+id/nav_main_preferences">
        <action android:id="@+id/action_MainPreferencesFragment_to_ReminderPreferencesFragment" app:destination="@+id/nav_reminder_preferences"/>
        <action android:id="@+id/action_MainPreferencesFragment_to_SoundPreferencesFragment" app:destination="@+id/nav_sound_preferences"/>
        <action android:id="@+id/action_MainPreferencesFragment_to_BillingFragment" app:destination="@+id/nav_billing_fragment"/>
    </fragment>
    <fragment android:label="@string/preference_reminder" android:name="com.health.openworkout.gui.preference.ReminderPreferences" android:id="@+id/nav_reminder_preferences"/>
    <fragment android:label="@string/preference_sound" android:name="com.health.openworkout.gui.preference.SoundPreferences" android:id="@+id/nav_sound_preferences"/>
    <fragment android:label="@string/menu_billing" android:name="com.health.openworkout.gui.datatypes.BillingFragment" android:id="@+id/nav_billing_fragment"/>
    <fragment android:label="@string/menu_trainings" android:name="com.health.openworkout.gui.training.TrainingFragment" android:id="@+id/nav_trainings">
        <action android:id="@+id/action_TrainingFragment_to_SessionFragment" app:destination="@+id/nav_sessions"/>
        <action android:id="@+id/action_TrainingFragment_to_TrainingSettingsFragment" app:destination="@+id/nav_trainingsettings"/>
        <action android:id="@+id/action_navTrainingsFragment_to_navTrainingsDatabaseFragment" app:destination="@+id/nav_trainingsdatabase"/>
    </fragment>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.training.TrainingSettingsFragment" android:id="@+id/nav_trainingsettings">
        <argument android:name="TrainingPlanId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="Mode" android:defaultValue="EDIT" app:argType="com.health.openworkout.gui.datatypes.GenericSettingsFragment$SETTING_MODE"/>
        <argument android:name="title" android:defaultValue="training settings" app:argType="string"/>
    </fragment>
    <fragment android:label="@string/menu_trainingsdatabase" android:name="com.health.openworkout.gui.training.TrainingsDatabaseFragment" android:id="@+id/nav_trainingsdatabase"/>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.session.SessionFragment" android:id="@+id/nav_sessions">
        <action android:id="@+id/action_SessionFragment_to_WorkoutFragment" app:destination="@+id/nav_workout"/>
        <argument android:name="TrainingPlanId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="title" android:defaultValue="sessions" app:argType="string"/>
        <action android:id="@+id/action_SessionsFragment_to_SessionSettingsFragment" app:destination="@+id/nav_sessionsettings"/>
    </fragment>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.session.SessionSettingsFragment" android:id="@+id/nav_sessionsettings">
        <argument android:name="TrainingPlanId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="WorkoutSessionId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="Mode" android:defaultValue="EDIT" app:argType="com.health.openworkout.gui.datatypes.GenericSettingsFragment$SETTING_MODE"/>
        <argument android:name="title" android:defaultValue="session settings" app:argType="string"/>
    </fragment>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.workout.WorkoutFragment" android:id="@+id/nav_workout">
        <argument android:name="SessionWorkoutId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="title" android:defaultValue="workout" app:argType="string"/>
        <action android:id="@+id/action_WorkoutFragment_to_WorkoutSlideFragment" app:destination="@+id/nav_workoutslide"/>
        <action android:id="@+id/action_WorkoutFramgent_to_WorkoutSettingsFragment" app:destination="@+id/nav_workoutsettings"/>
        <action android:id="@+id/action_WorkoutFragment_to_WorkoutDatabaseFragment" app:destination="@+id/nav_workoutdatabase"/>
    </fragment>
    <fragment android:label="@string/menu_workoutdatabase" android:name="com.health.openworkout.gui.workout.WorkoutDatabaseFragment" android:id="@+id/nav_workoutdatabase">
        <argument android:name="SessionWorkoutId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="WorkoutItemId" android:defaultValue="-1L" app:argType="long"/>
        <action android:id="@+id/action_WorkoutDatabaseFragment_to_WorkoutSettingsFragment" app:destination="@+id/nav_workoutsettings"/>
    </fragment>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.workout.WorkoutSettingsFragment" android:id="@+id/nav_workoutsettings">
        <argument android:name="SessionWorkoutId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="WorkoutItemId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="Mode" android:defaultValue="EDIT" app:argType="com.health.openworkout.gui.datatypes.GenericSettingsFragment$SETTING_MODE"/>
        <argument android:name="title" android:defaultValue="Workout settings" app:argType="string"/>
    </fragment>
    <fragment android:label="{title}" android:name="com.health.openworkout.gui.workout.WorkoutSlideFragment" android:id="@+id/nav_workoutslide">
        <argument android:name="SessionWorkoutId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="WorkoutItemId" android:defaultValue="-1L" app:argType="long"/>
        <argument android:name="title" android:defaultValue="workout slide" app:argType="string"/>
        <action android:id="@+id/action_nav_WorkoutSlideFragment_to_TrophyFragment" app:destination="@+id/nav_trophy"/>
    </fragment>
    <fragment android:label="@string/menu_trophy" android:name="com.health.openworkout.gui.datatypes.TrophyFragment" android:id="@+id/nav_trophy">
        <argument android:name="SessionWorkoutId" android:defaultValue="-1L" app:argType="long"/>
    </fragment>
</navigation>
