<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:id="@+id/search_bar" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/search_badge" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp"/>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/x_res_0x7f090181" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/l_res_0x7f10001c" style="?attr/actionButtonStyle"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/z_res_0x7f090183" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_weight="1" android:layoutDirection="locale">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/B_res_0x7f090185" android:visibility="gone" android:layout_width="@dimen/e_res_0x7f070029" android:layout_height="wrap_content" android:scaleType="centerInside" style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/C_res_0x7f090186" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1">
            <view android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@+id/D" android:background="@null" android:paddingLeft="@dimen/f_res_0x7f07002a" android:paddingRight="@dimen/abc_dropdownitem_text_padding_right" android:layout_width="0dp" android:layout_height="36dp" android:singleLine="true" android:layout_weight="1" android:inputType="textNoSuggestions" android:dropDownAnchor="@+id/z_res_0x7f090183" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/y_res_0x7f090182" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="8dp" android:paddingRight="8dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/abc_searchview_description_clear"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/J" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/A_res_0x7f090184" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/abc_searchview_description_submit"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/E" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/abc_searchview_description_voice"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
